--- a/product.html
+++ b/product.html
@@ -26,7 +26,7 @@
   <!-- starbelly css -->
   <link rel="stylesheet" href="css/style.css">
   <!-- page title -->
-  <title>Apna Lappy | Best Refurb lappy Seller</title></head>
+  <title>Product | Apna Lappy</title></head>
 
 <body>
   <!-- app wrapper -->
@@ -117,37 +117,8 @@
             <li><a href="#."><img src="img/instagram/5.jpg" alt="instagram"></a></li>
             <li><a href="#."><img src="img/instagram/6.jpg" alt="instagram"></a></li>
           </ul>
-          <hr>
-          <div class="sb-ib-title-frame sb-mb-30">
-            <h4>Latest publications</h4><i class="fas fa-arrow-down"></i>
-          </div>
-          <a href="publication-1.html" class="sb-blog-card sb-blog-card-sm sb-mb-30">
-            <div class="sb-cover-frame">
-              <img src="img/blog/1.jpg" alt="cover">
-            </div>
-            <div class="sb-blog-card-descr">
-              <h5 class="sb-mb-5">Simple Homemade Tomato Soup</h5>
-              <p class="sb-text sb-text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero optio, sed expedita.</p>
-            </div>
-          </a>
-          <a href="publication-1.html" class="sb-blog-card sb-blog-card-sm sb-mb-30">
-            <div class="sb-cover-frame">
-              <img src="img/blog/2.jpg" alt="cover">
-            </div>
-            <div class="sb-blog-card-descr">
-              <h5 class="sb-mb-5">Thai Coconut Soup with Tofu and Rice</h5>
-              <p class="sb-text sb-text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero optio, sed expedita.</p>
-            </div>
-          </a>
-          <a href="publication-1.html" class="sb-blog-card sb-blog-card-sm sb-mb-30">
-            <div class="sb-cover-frame">
-              <img src="img/blog/3.jpg" alt="cover">
-            </div>
-            <div class="sb-blog-card-descr">
-              <h5 class="sb-mb-5">21 Things You Should Absolutely Be Buying at ALDI</h5>
-              <p class="sb-text sb-text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero optio, sed expedita.</p>
-            </div>
-          </a>
+        
+            
         </div>
         <div class="sb-info-bar-footer">
           <ul class="sb-social">
@@ -165,7 +136,7 @@
           <div class="sb-ib-title-frame sb-mb-30">
             <h4>Your order.</h4><i class="fas fa-arrow-down"></i>
           </div>
-          <a href="shop-list-1.html" class="sb-menu-item sb-menu-item-sm sb-mb-15">
+          <a href="accessories.html" class="sb-menu-item sb-menu-item-sm sb-mb-15">
             <div class="sb-cover-frame">
               <img src="img/menu/4.jpg" alt="product">
             </div>
@@ -174,34 +145,34 @@
               <div class="sb-price"><sub>$</sub> 9</div>
             </div>
           </a>
-          <a href="shop-list-1.html" class="sb-menu-item sb-menu-item-sm sb-mb-15">
+          <a href="accessories.html" class="sb-menu-item sb-menu-item-sm sb-mb-15">
             <div class="sb-cover-frame">
               <img src="img/menu/1.jpg" alt="product">
             </div>
             <div class="sb-card-tp">
-              <h4 class="sb-card-title">Chevrefrit au miel</h4>
+              <h4 class="sb-card-title">Best Seller Laptop</h4>
               <div class="sb-price"><sub>$</sub> 14</div>
             </div>
           </a>
-          <a href="shop-list-1.html" class="sb-menu-item sb-menu-item-sm sb-mb-15">
+          <a href="accessories.html" class="sb-menu-item sb-menu-item-sm sb-mb-15">
             <div class="sb-cover-frame">
               <img src="img/menu/2.jpg" alt="product">
             </div>
             <div class="sb-card-tp">
-              <h4 class="sb-card-title">Croustillant de poisson</h4>
+              <h4 class="sb-card-title">Best Seller Laptop</h4>
               <div class="sb-price"><sub>$</sub> 4</div>
             </div>
           </a>
-          <a href="shop-list-1.html" class="sb-menu-item sb-menu-item-sm sb-mb-15">
+          <a href="accessories.html" class="sb-menu-item sb-menu-item-sm sb-mb-15">
             <div class="sb-cover-frame">
               <img src="img/menu/3.jpg" alt="product">
             </div>
             <div class="sb-card-tp">
-              <h4 class="sb-card-title">Stracciatella</h4>
+              <h4 class="sb-card-title">Best Seller Laptop</h4>
               <div class="sb-price"><sub>$</sub> 11</div>
             </div>
           </a>
-          <a href="shop-list-1.html" class="sb-menu-item sb-menu-item-sm sb-mb-15">
+          <a href="accessories.html" class="sb-menu-item sb-menu-item-sm sb-mb-15">
             <div class="sb-cover-frame">
               <img src="img/menu/5.jpg" alt="product">
             </div>
@@ -242,8 +213,7 @@
                   <h1 class="sb-h2">Online shop</h1>
                   <ul class="sb-breadcrumbs">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="shop.html">Shop</a></li>
-                    <li><a href="#.">Product</a></li>
+                      <li><a href="#.">Product</a></li>
                   </ul>
                 </div>
               </div>
@@ -261,7 +231,7 @@
             <div class="col-lg-6">
               <div class="sb-gallery-item sb-gallery-square sb-mb-90">
                 <img src="img/menu/4.jpg" alt="photo">
-                <div class="sb-badge sb-Trending"><i class=" "></i> Trending</div>
+                <div class="sb-badge sb-Trending"><i class="fas fa-bolt"></i> Trending</div>
                 <!-- button -->
                 <a data-fancybox="menu" data-no-swup href="img/menu/4.jpg" class="sb-btn sb-btn-2 sb-btn-icon sb-btn-gray sb-zoom">
                   <span class="sb-icon">
@@ -292,7 +262,7 @@
                       <div class="sb-number">01</div>
                       <div class="sb-feature-text">
                         <h4 class="sb-mb-15">Add to the cart and place an order</h4>
-                        <p class="sb-text sb-text-sm">Porro comirton pera nemo veniam</p>
+                        <p class="sb-text sb-text-sm">Proceed to Cart and Complete Your Purchase</p>
                       </div>
                     </div>
                   </div>
@@ -301,7 +271,7 @@
                       <div class="sb-number">02</div>
                       <div class="sb-feature-text">
                         <h4 class="sb-mb-15">Enter your phone number and address</h4>
-                        <p class="sb-text sb-text-sm">Eligendi adipisci numquam.</p>
+                        <p class="sb-text sb-text-sm">Provide Your Phone Number and Shipping Details.</p>
                       </div>
                     </div>
                   </div>
@@ -310,7 +280,7 @@
                       <div class="sb-number">03</div>
                       <div class="sb-feature-text">
                         <h4 class="sb-mb-15">Enjoy your favorite food at home!</h4>
-                        <p class="sb-text sb-text-sm">Nnecessitatibus praesentium</p>
+                        <p class="sb-text sb-text-sm">Delight in Your Favorite Cuisine at Home!</p>
                       </div>
                     </div>
                   </div>
@@ -336,7 +306,7 @@
           </div>
           <!-- filter -->
           <div class="sb-filter">
-            <a href="#." data-filter=".sb-ingredients-tab" class="sb-filter-link sb-active">Ingredients</a>
+            <a href="#." data-filter=".sb-ingredients-tab" class="sb-filter-link sb-active">Features</a>
             <a href="#." data-filter=".sb-details-tab" class="sb-filter-link">Product details</a>
             <a href="#." data-filter=".sb-reviews-tab" class="sb-filter-link">Reviews</a>
           </div>
@@ -346,14 +316,14 @@
             <div class="sb-grid-item sb-ingredients-tab">
               <div class="sb-tab">
                 <ul class="sb-list">
-                  <li><b>Numquam</b><span>1 pack</span></li>
-                  <li><b>Cupiditate</b><span>150g</span></li>
-                  <li><b>Adipisicing</b><span>500g</span></li>
-                  <li><b>Dolorem obcaecati</b><span>3 Teaspoon</span></li>
-                  <li><b>Porro</b><span>2 pack</span></li>
-                  <li><b>Facilis</b><span>1kg</span></li>
-                  <li><b>Goluptatem</b><span>1 Teaspoon</span></li>
-                  <li><b>Vel fuga</b><span>300g</span></li>
+                  <li><b>Generation</b><span>12th Gen</span></li>
+                  <li><b>Processor</b><span>Intel Core i7-12650H</span></li>
+                  <li><b>GPU</b><span>6GB RTX 4050</span></li>
+                  <li><b>RAM</b><span>16 GB DDR4</span></li>
+                  <li><b>Storage</b><span>512 GB</span></li>
+                  <li><b>Refresh rate</b><span>144 Hz</span></li>
+                  <li><b>Fingerprint</b><span>In keypad</span></li>
+                  <li><b>Weight</b><span>1.5 Kg</span></li>
                 </ul>
               </div>
             </div>
@@ -430,7 +400,7 @@
           <div class="sb-group-title sb-mb-30">
             <div class="sb-left sb-mb-30">
               <h2 class="sb-cate-title sb-mb-30">It is usually bought together with this product</h2>
-              <p class="sb-text">Consectetur numquam poro nemo veniam<br>eligendi rem adipisci quo modi.</p>
+              <p class="sb-text">Customers Often Purchase This Product Along with Related Items</p>
             </div>
             <div class="sb-right sb-mb-30">
               <!-- slider navigation -->
@@ -445,19 +415,19 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="sb-menu-item">
-                  <a href="shop-list-1.html" class="sb-cover-frame">
+                  <a href="accessories.html" class="sb-cover-frame">
                     <img src="img/menu/1.jpg" alt="product">
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="shop-list-1.html">Chevrefrit au miel</a></h4>
+                    <h4 class="sb-card-title"><a href="accessories.html">Best Seller Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 14</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TBGB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
-                    <a href="shop-list-1.html" class="sb-btn sb-btn-2 sb-btn-gray sb-btn-icon sb-m-0">
+                    <a href="accessories.html" class="sb-btn sb-btn-2 sb-btn-gray sb-btn-icon sb-m-0">
                       <span class="sb-icon">
                         <img src="img/ui/icons/arrow.svg" alt="icon">
                       </span>
@@ -477,12 +447,12 @@
               </div>
               <div class="swiper-slide">
                 <div class="sb-menu-item">
-                  <a href="shop-list-1.html" class="sb-cover-frame">
+                  <a href="accessories.html" class="sb-cover-frame">
                     <img src="img/menu/2.jpg" alt="product">
                     <div class="sb-badge sb-Trending"><i class=" "></i> Trending</div>
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="shop-list-1.html">HP Laptop</a></h4>
+                    <h4 class="sb-card-title"><a href="accessories.html">Best Seller Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 9</div>
                   </div>
                   <div class="sb-description">
@@ -490,7 +460,7 @@
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
-                    <a href="shop-list-1.html" class="sb-btn sb-btn-2 sb-btn-gray sb-btn-icon sb-m-0">
+                    <a href="accessories.html" class="sb-btn sb-btn-2 sb-btn-gray sb-btn-icon sb-m-0">
                       <span class="sb-icon">
                         <img src="img/ui/icons/arrow.svg" alt="icon">
                       </span>
@@ -510,19 +480,19 @@
               </div>
               <div class="swiper-slide">
                 <div class="sb-menu-item">
-                  <a href="shop-list-1.html" class="sb-cover-frame">
+                  <a href="accessories.html" class="sb-cover-frame">
                     <img src="img/menu/3.jpg" alt="product">
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="shop-list-1.html">Stracciatella</a></h4>
+                    <h4 class="sb-card-title"><a href="accessories.html">Best Seller Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 9</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TBGB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
-                    <a href="shop-list-1.html" class="sb-btn sb-btn-2 sb-btn-gray sb-btn-icon sb-m-0">
+                    <a href="accessories.html" class="sb-btn sb-btn-2 sb-btn-gray sb-btn-icon sb-m-0">
                       <span class="sb-icon">
                         <img src="img/ui/icons/arrow.svg" alt="icon">
                       </span>
@@ -542,19 +512,19 @@
               </div>
               <div class="swiper-slide">
                 <div class="sb-menu-item">
-                  <a href="shop-list-1.html" class="sb-cover-frame">
+                  <a href="accessories.html" class="sb-cover-frame">
                     <img src="img/menu/4.jpg" alt="product">
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="shop-list-1.html">Croustillant de poisson</a></h4>
+                    <h4 class="sb-card-title"><a href="accessories.html">Best Seller Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 4</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TBGB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
-                    <a href="shop-list-1.html" class="sb-btn sb-btn-2 sb-btn-gray sb-btn-icon sb-m-0">
+                    <a href="accessories.html" class="sb-btn sb-btn-2 sb-btn-gray sb-btn-icon sb-m-0">
                       <span class="sb-icon">
                         <img src="img/ui/icons/arrow.svg" alt="icon">
                       </span>
@@ -574,19 +544,19 @@
               </div>
               <div class="swiper-slide">
                 <div class="sb-menu-item">
-                  <a href="shop-list-1.html" class="sb-cover-frame">
+                  <a href="accessories.html" class="sb-cover-frame">
                     <img src="img/menu/5.jpg" alt="product">
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="shop-list-1.html">Carpaccio de daurade</a></h4>
+                    <h4 class="sb-card-title"><a href="accessories.html">Carpaccio de daurade</a></h4>
                     <div class="sb-price"><sub>$</sub> 6</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TBGB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
-                    <a href="shop-list-1.html" class="sb-btn sb-btn-2 sb-btn-gray sb-btn-icon sb-m-0">
+                    <a href="accessories.html" class="sb-btn sb-btn-2 sb-btn-gray sb-btn-icon sb-m-0">
                       <span class="sb-icon">
                         <img src="img/ui/icons/arrow.svg" alt="icon">
                       </span>
@@ -606,19 +576,19 @@
               </div>
               <div class="swiper-slide">
                 <div class="sb-menu-item">
-                  <a href="shop-list-1.html" class="sb-cover-frame">
+                  <a href="accessories.html" class="sb-cover-frame">
                     <img src="img/menu/6.jpg" alt="product">
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="shop-list-1.html">Chevrefrit au miel</a></h4>
+                    <h4 class="sb-card-title"><a href="accessories.html">Best Seller Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 14</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TBGB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
-                    <a href="shop-list-1.html" class="sb-btn sb-btn-2 sb-btn-gray sb-btn-icon sb-m-0">
+                    <a href="accessories.html" class="sb-btn sb-btn-2 sb-btn-gray sb-btn-icon sb-m-0">
                       <span class="sb-icon">
                         <img src="img/ui/icons/arrow.svg" alt="icon">
                       </span>
@@ -652,7 +622,7 @@
                 <h2 class="sb-h1 sb-mb-15">Free delivery service.</h2>
                 <p class="sb-text sb-mb-30">*We provide free delivery services in the area under 2km from the store!</p>
                 <!-- button -->
-                <a href="shop.html" class="sb-btn">
+                <a href="checkout.html" class="sb-btn">
                   <span class="sb-icon">
                     <img src="img/ui/icons/cart.svg" alt="icon">
                   </span>
@@ -700,7 +670,7 @@
               <li><a href="#."><i class="fab fa-facebook-f"></i></a></li>
               <li><a href="#."><i class="fab fa-youtube"></i></a></li>
             </ul>
-            <div class="sb-copy">&copy; late 2021 Starbelly. All Rights Reserved.</div>
+            <div class="sb-copy">&copy; 2024 Apna Lappy. All Rights Reserved.</div>
           </div>
         </div>
       </footer>
