--- a/cart.html
+++ b/cart.html
@@ -276,8 +276,8 @@
                       <img src="img/menu/1.jpg" alt="product">
                     </div>
                     <div class="sb-prod-description">
-                      <h4 class="sb-mb-10">Chevrefrit au miel</h4>
-                      <p class="sb-text sb-text-sm"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                      <h4 class="sb-mb-10">Performance Laptop </h4>
+                      <p class="sb-text sb-text-sm"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TB</span>.</p>
                     </div>
                   </a>
                 </div>
@@ -307,8 +307,8 @@
                       <img src="img/menu/2.jpg" alt="product">
                     </div>
                     <div class="sb-prod-description">
-                      <h4 class="media-heading sb-mb-10">Carpaccio de daurade</h4>
-                      <p class="sb-text sb-text-sm"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                      <h4 class="media-heading sb-mb-10">HP Gaming Laptop</h4>
+                      <p class="sb-text sb-text-sm"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TB</span>.</p>
                     </div>
                   </a>
                 </div>
@@ -338,8 +338,8 @@
                       <img src="img/menu/3.jpg" alt="product">
                     </div>
                     <div class="sb-prod-description">
-                      <h4 class="media-heading sb-mb-10">Stracciatella</h4>
-                      <p class="sb-text sb-text-sm"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                      <h4 class="media-heading sb-mb-10">Premium Laptop</h4>
+                      <p class="sb-text sb-text-sm"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TB</span>.</p>
                     </div>
                   </a>
                 </div>
