--- a/shop.html
+++ b/shop.html
@@ -171,7 +171,7 @@
               <img src="img/menu/4.jpg" alt="product">
             </div>
             <div class="sb-card-tp">
-              <h4 class="sb-card-title">Saumon Gravlax</h4>
+              <h4 class="sb-card-title">Performance Laptop</h4>
               <div class="sb-price"><sub>$</sub> 9</div>
             </div>
           </a>
@@ -180,7 +180,7 @@
               <img src="img/menu/1.jpg" alt="product">
             </div>
             <div class="sb-card-tp">
-              <h4 class="sb-card-title">Chevrefrit au miel</h4>
+              <h4 class="sb-card-title">Performance Laptop</h4>
               <div class="sb-price"><sub>$</sub> 14</div>
             </div>
           </a>
@@ -189,7 +189,7 @@
               <img src="img/menu/2.jpg" alt="product">
             </div>
             <div class="sb-card-tp">
-              <h4 class="sb-card-title">Croustillant de poisson</h4>
+              <h4 class="sb-card-title">Performance Laptop</h4>
               <div class="sb-price"><sub>$</sub> 4</div>
             </div>
           </a>
@@ -198,7 +198,7 @@
               <img src="img/menu/3.jpg" alt="product">
             </div>
             <div class="sb-card-tp">
-              <h4 class="sb-card-title">Stracciatella</h4>
+              <h4 class="sb-card-title">Performance Laptop</h4>
               <div class="sb-price"><sub>$</sub> 11</div>
             </div>
           </a>
@@ -207,7 +207,7 @@
               <img src="img/menu/5.jpg" alt="product">
             </div>
             <div class="sb-card-tp">
-              <h4 class="sb-card-title">Carpaccio de daurade</h4>
+              <h4 class="sb-card-title">Performance Laptop</h4>
               <div class="sb-price"><sub>$</sub> 19</div>
             </div>
           </a>
@@ -259,7 +259,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
-              <a href="lappy.html" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
+              <a href="shop-list-1.html" class="sb-categorie-card sb-categorie-card-2 sb-mb-30">
                 <div class="sb-card-body">
                   <div class="sb-category-icon">
                     <img src="img/categories/1.png" alt="icon">
@@ -351,11 +351,11 @@
                     <img src="img/menu/1.jpg" alt="product">
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="product.html">Chevrefrit au miel</a></h4>
+                    <h4 class="sb-card-title"><a href="product.html">Performance Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 14</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
@@ -384,11 +384,11 @@
                     <div class="sb-badge sb-vegan"><i class="fas fa-leaf"></i> Vegan</div>
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="product.html">Saumon Gravlax</a></h4>
+                    <h4 class="sb-card-title"><a href="product.html">Performance Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 9</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
@@ -416,11 +416,11 @@
                     <img src="img/menu/3.jpg" alt="product">
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="product.html">Stracciatella</a></h4>
+                    <h4 class="sb-card-title"><a href="product.html">Performance Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 9</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
@@ -448,11 +448,11 @@
                     <img src="img/menu/4.jpg" alt="product">
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="product.html">Croustillant de poisson</a></h4>
+                    <h4 class="sb-card-title"><a href="product.html">Performance Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 4</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
@@ -480,11 +480,11 @@
                     <img src="img/menu/5.jpg" alt="product">
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="product.html">Carpaccio de daurade</a></h4>
+                    <h4 class="sb-card-title"><a href="product.html">Performance Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 6</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
@@ -512,11 +512,11 @@
                     <img src="img/menu/6.jpg" alt="product">
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="product.html">Chevrefrit au miel</a></h4>
+                    <h4 class="sb-card-title"><a href="product.html">Performance Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 14</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
@@ -580,11 +580,11 @@
                     <img src="img/menu/10.jpg" alt="product">
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="product.html">Croustillant de poisson</a></h4>
+                    <h4 class="sb-card-title"><a href="product.html">Performance Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 14</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
@@ -612,11 +612,11 @@
                     <img src="img/menu/6.jpg" alt="product">
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="product.html">Chevrefrit au miel</a></h4>
+                    <h4 class="sb-card-title"><a href="product.html">Performance Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 14</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
@@ -645,11 +645,11 @@
                     <div class="sb-badge sb-vegan"><i class="fas fa-leaf"></i> Vegan</div>
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="product.html">Saumon Gravlax</a></h4>
+                    <h4 class="sb-card-title"><a href="product.html">Performance Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 9</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
@@ -677,11 +677,11 @@
                     <img src="img/menu/8.jpg" alt="product">
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="product.html">Stracciatella</a></h4>
+                    <h4 class="sb-card-title"><a href="product.html">Performance Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 9</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
@@ -709,11 +709,11 @@
                     <img src="img/menu/9.jpg" alt="product">
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="product.html">Croustillant de poisson</a></h4>
+                    <h4 class="sb-card-title"><a href="product.html">Performance Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 4</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
@@ -741,11 +741,11 @@
                     <img src="img/menu/10.jpg" alt="product">
                   </a>
                   <div class="sb-card-tp">
-                    <h4 class="sb-card-title"><a href="product.html">Carpaccio de daurade</a></h4>
+                    <h4 class="sb-card-title"><a href="product.html">Performance Laptop</a></h4>
                     <div class="sb-price"><sub>$</sub> 6</div>
                   </div>
                   <div class="sb-description">
-                    <p class="sb-text sb-mb-15"><span>tomatoes</span>, <span>nori</span>, <span>feta cheese</span>, <span>mushrooms</span>, <span>rice noodles</span>, <span>corn</span>, <span>shrimp</span>.</p>
+                    <p class="sb-text sb-mb-15"><span>Performance Centric Laptop, 10th Gen Intel Core i7-128450H, 6GB RTX 4050 GPU, 144Hz, 16GB DDR4, 1 TB</span>.</p>
                   </div>
                   <div class="sb-card-buttons-frame">
                     <!-- button -->
