--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                 <a data-fancybox="menu" data-no-swup href="img/menu/2.jpg" class="sb-menu-item">
                   <div class="sb-cover-frame">
                     <img src="img/menu/2.jpg" alt="product">
-                    <div class="sb-badge sb-    Trending"><i class=" "></i>      Trending</div>
+                    <div class="sb-badge sb-    Trending"><i class="fas fa-bolt"></i>      Trending</div>
                   </div>
                   <div class="sb-card-tp">
                     <h4 class="sb-card-title">HP Gaming Laptop</h4>
@@ -485,7 +485,7 @@
                 <a data-fancybox="menu" data-no-swup href="img/menu/9.jpg" class="sb-menu-item">
                   <div class="sb-cover-frame">
                     <img src="img/menu/9.jpg" alt="product">
-                    <div class="sb-badge sb-hot"><i class=" "></i> Hot Deal</div>
+                    <div class="sb-badge sb-hot"><i class="fas fa-star"></i> Hot Deal</div>
                   </div>
                   <div class="sb-card-tp">
                     <h4 class="sb-card-title">HP Gaming Laptop</h4>
@@ -506,7 +506,7 @@
                 <a data-fancybox="menu" data-no-swup href="img/menu/5.jpg" class="sb-menu-item">
                   <div class="sb-cover-frame">
                     <img src="img/menu/5.jpg" alt="product">
-                    <div class="sb-badge sb-trending"><i class=" "></i>Trending</div>
+                    <div class="sb-badge sb-trending"><i class="fas fa-bolt"></i>Trending</div>
                   </div>
                   <div class="sb-card-tp">
                     <h4 class="sb-card-title">HP Gaming Laptop</h4>
