--- a/about.html
+++ b/about.html
@@ -569,7 +569,7 @@
               <li><a href="#."><i class="fab fa-facebook-f"></i></a></li>
               <li><a href="#."><i class="fab fa-youtube"></i></a></li>
             </ul>
-            <div class="sb-copy">&copy; late 2021 Starbelly. All Rights Reserved.</div>
+            <div class="sb-copy">&copy; 2024 Apna Lappy. All Rights Reserved.</div>
           </div>
         </div>
       </footer>
